# aesop-mcp

./: README.md  aesop_mcp.py  pyproject.toml
.github/workflows/: ci.yml
aesop_mcp/: __init__.py  __main__.py  character.py  fable.py  moral.py  narrative.py  server.py
tests/: test_aesop_mcp.py
