[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aesop-mcp"
version = "0.2.0"
description = "A Model Context Protocol server for fable generation and moral reasoning"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "fable", "aesop", "moral", "story", "narrative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
aesop-mcp = "aesop_mcp.server:main"

[tool.setuptools.packages.find]
include = ["aesop_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
